[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "construction_pmis"
authors = [
    {name = "Jules", email = "jules@example.com"},
]
description = "Project Management Information System for Construction"
requires-python = ">=3.10"
dynamic = ["version"]

[tool.flit.module]
name = "construction_pmis"
